bk_ida/gccida/g2/simplify_comparison
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10393:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10393:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10395:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10403:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10415:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10445:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v53; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10448:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v56; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10449:4: error: expected ';' after expression
rtx compound_operation; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10449:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // r14 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:6337:1: note: 'make_compound_operation' declared here
make_compound_operation (x, in_code)
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10450:4: error: expected ';' after expression
rtx v58; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10450:5: error: use of undeclared identifier 'v58'
rtx v58; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10451:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v59; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10457:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v66; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10469:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10469:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10474:4: error: expected ';' after expression
rtx v83; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10474:5: error: use of undeclared identifier 'v83'
rtx v83; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/combine.c:10483:4: error: expected ';' after expression
rtx v92; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_comparison/src/obj/combine.o] Error 1
